--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>⚡ project silica 404sec (Room Registry)</title>
+  <title>⚡ project silica 404sec</title>
   <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -261,7 +261,9 @@
       });
       sendBtn.disabled = list.length === 0;
     }
-
+    
+<!-- untiedlaces , 02 3 , bxr , hd -->
+  
     // MESSAGING
     function sendMessage() {
       const input = document.getElementById('messageInput');
