--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!-- untiedlaces , 02 3 , bxr , hd -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>⚡ project silica 404sec</title>
+  <title>⚡ project silica 404sec (Room Registry Fix)</title>
   <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0 }
@@ -14,7 +13,6 @@
       padding: 20px;
     }
     h2 { margin-bottom: 12px }
-    /* Chat area */
     #chatbox {
       flex: 1; overflow-y: auto;
       background: #111; border: 1px solid #0f0;
@@ -31,7 +29,6 @@
     }
     .text { line-height: 1.4 }
     .system { opacity: 0.6; font-style: italic }
-    /* Panels */
     #peerArea, #roomArea {
       display: flex; align-items: center;
       gap: 8px; margin-bottom: 12px;
@@ -51,7 +48,7 @@
       padding: 4px; border: 1px solid #0f0;
       margin-top: 4px;
     }
-    /* Avatar/Lock (kept minimal) */
+    /* Avatar/Lock screens (unchanged) */
     #avatarPicker, #lockScreen {
       position: fixed; inset: 0; display: none;
       background: rgba(0,0,0,0.95);
@@ -64,27 +61,29 @@
       gap: 12px; margin: 12px 0;
     }
     #avatarGrid img {
-      width: 70px; cursor: pointer;
-      border: 1px solid #0f0;
+      width: 70px; cursor: pointer; border: 1px solid #0f0;
     }
     .avatar-option { margin-top: 10px }
+    #statusMsg {
+      margin-top: 6px; font-size: 0.9em; color: #f00;
+    }
   </style>
 </head>
 <body oncontextmenu="return false;">
 
+  <!-- untiedlaces , 02 3 , bxr ,hd -->
+
   <!-- Avatar Picker -->
   <div id="avatarPicker" class="active">
     <h3>🧙 Choose Your Avatar</h3>
-    <button onclick="refreshAvatars()">🔄 Refresh</button>
+    <button id="refreshAvatars">🔄 Refresh</button>
     <div id="avatarGrid"></div>
     <div class="avatar-option">
-      <button onclick="chooseAvatar('https://via.placeholder.com/40/000')">
-        Use Black Avatar
-      </button>
+      <button id="blackAvatar">Use Black Avatar</button>
     </div>
     <div class="avatar-option">
       <input id="customURL" placeholder="Custom URL…" />
-      <button onclick="useCustomURL()">OK</button>
+      <button id="customOk">OK</button>
     </div>
     <p style="font-size:12px;">
       Avatars by Dicebear | Or supply your own URL
@@ -110,217 +109,239 @@
     <input id="my-id" readonly />
     <button id="copyIdBtn">Copy ID</button>
     <input id="connectId" placeholder="Friend's ID…" />
-    <button onclick="connectToPeer()">Connect</button>
+    <button id="connectBtn">Connect</button>
   </div>
 
-  <!-- Room Registry Controls -->
+  <!-- Room Controls -->
   <div id="roomArea">
     <input id="roomName" placeholder="Room name…" />
-    <button onclick="createRoom()">Create Room</button>
-    <button onclick="listRooms()">List Rooms</button>
+    <button id="createRoomBtn">Create Room</button>
+    <button id="listRoomsBtn">List Rooms</button>
     <select id="roomList" style="min-width:120px;">
       <option value="" disabled selected>— select —</option>
     </select>
-    <button onclick="joinRoom()">Join Room</button>
+    <button id="joinRoomBtn">Join Room</button>
   </div>
+  <div id="statusMsg"></div>
 
-  <!-- Active Connections List -->
+  <!-- Connections & Chat -->
   <div id="connections"></div>
-
-  <!-- Chat Display -->
   <div id="chatbox"></div>
-
-  <!-- Message Input -->
   <div id="bottom">
     <input id="messageInput" placeholder="Type message…" />
-    <button id="sendBtn" onclick="sendMessage()" disabled>Send</button>
+    <button id="sendBtn" disabled>Send</button>
   </div>
 
   <script>
-  // CONFIG
-  const REGISTRY_URL = 'http://localhost:3000';
+  (function(){
+    const REGISTRY_URL = 'http://localhost:3000';
+    let username = prompt("Choose your username:") || "Anonymous";
+    let avatarURL = '';
+    const styles = ["fun-emoji","pixel-art","bottts","identicon","adventurer","croodles"];
+    const seedBase = username.replace(/\W+/g,'').toLowerCase()||'guest';
+    const avatarGrid = document.getElementById('avatarGrid');
+    const statusMsg = document.getElementById('statusMsg');
 
-  // USER & AVATAR
-  let username = prompt("Choose your username:") || "Anonymous";
-  let avatarURL = '';
-  const styles = ["fun-emoji","pixel-art","bottts","identicon","adventurer","croodles"];
-  const seedBase = username.replace(/\W+/g,'').toLowerCase() || 'guest';
-  const grid = document.getElementById('avatarGrid');
-
-  function refreshAvatars() {
-    grid.innerHTML = '';
-    for (let i=0; i<9; i++){
-      const style = styles[Math.floor(Math.random()*styles.length)];
-      const seed = seedBase + Math.floor(Math.random()*10000);
-      const img = document.createElement('img');
-      img.src = `https://api.dicebear.com/7.x/${style}/svg?seed=${seed}`;
-      img.onclick = () => chooseAvatar(img.src);
-      grid.appendChild(img);
+    // Avatar picker
+    function refreshAvatars(){
+      avatarGrid.innerHTML = '';
+      for(let i=0;i<9;i++){
+        const style=styles[Math.floor(Math.random()*styles.length)];
+        const seed=seedBase+Math.floor(Math.random()*10000);
+        const img=document.createElement('img');
+        img.src=`https://api.dicebear.com/7.x/${style}/svg?seed=${seed}`;
+        img.onclick=()=>chooseAvatar(img.src);
+        avatarGrid.appendChild(img);
+      }
     }
-  }
-  function chooseAvatar(url) {
-    avatarURL = url;
-    document.getElementById('avatarPicker').classList.remove('active');
-    document.getElementById('lockScreen').classList.add('active');
-  }
-  function useCustomURL() {
-    const url = document.getElementById('customURL').value.trim();
-    if (url) chooseAvatar(url);
-  }
-  refreshAvatars();
-
-  // LOCK SCREEN
-  document.getElementById('unlockForm').addEventListener('submit', e => {
-    e.preventDefault();
-    if (document.getElementById('passwordInput').value === ':)00@') {
-      document.getElementById('lockScreen').classList.remove('active');
-    } else {
-      document.getElementById('passwordMsg').textContent = '❌ Wrong password';
+    function chooseAvatar(url){
+      avatarURL=url;
+      document.getElementById('avatarPicker').classList.remove('active');
+      document.getElementById('lockScreen').classList.add('active');
     }
-  });
+    document.getElementById('refreshAvatars').onclick=refreshAvatars;
+    document.getElementById('blackAvatar').onclick=()=>chooseAvatar('https://via.placeholder.com/40/000');
+    document.getElementById('customOk').onclick=()=>{
+      const url=document.getElementById('customURL').value.trim();
+      if(url) chooseAvatar(url);
+    };
+    refreshAvatars();
 
-  // P2P & REGISTRY
-  const peer = new Peer(), connections = {};
-  const idInput = document.getElementById('my-id');
-  const sendBtn = document.getElementById('sendBtn');
-  const connDiv = document.getElementById('connections');
-
-  peer.on('open', id => {
-    idInput.value = id;
-    listRooms();
-  });
-
-  peer.on('connection', c => {
-    if (!connections[c.peer]) setupConnection(c);
-  });
-
-  function setupConnection(c) {
-    connections[c.peer] = c;
-    renderConnections();
-    c.on('data', data => appendMessage(data, false));
-    c.on('close', () => {
-      delete connections[c.peer];
-      appendSystemMsg(`Peer left: ${c.peer}`);
-      renderConnections();
-    });
-    appendSystemMsg(`Connected: ${c.peer}`);
-    renderConnections();
-  }
-
-  // COPY FRIEND ID
-  document.getElementById('copyIdBtn').onclick = () => {
-    navigator.clipboard.writeText(idInput.value)
-      .then(() => alert('ID copied to clipboard'));
-  };
-
-  function connectToPeer() {
-    const fid = document.getElementById('connectId').value.trim();
-    if (!fid || connections[fid] || fid === peer.id) return;
-    const c = peer.connect(fid);
-    c.on('open', () => setupConnection(c));
-  }
-
-  async function createRoom() {
-    const room = document.getElementById('roomName').value.trim();
-    if (!room) return alert('Enter a room name');
-    await fetch(`${REGISTRY_URL}/rooms`, {
-      method: 'POST',
-      headers: { 'Content-Type':'application/json' },
-      body: JSON.stringify({ room })
-    });
-    document.getElementById('roomName').value = '';
-    await listRooms();
-  }
-
-  async function listRooms() {
-    try {
-      const res = await fetch(`${REGISTRY_URL}/rooms`);
-      const rooms = await res.json();
-      const sel = document.getElementById('roomList');
-      sel.innerHTML = '<option value="" disabled selected>— select —</option>' +
-        rooms.map(r => `<option value="${r}">${r}</option>`).join('');
-    } catch (e) {
-      console.error('Failed to list rooms', e);
-    }
-  }
-
-  async function joinRoom() {
-    const room = document.getElementById('roomList').value;
-    if (!room) return alert('Select a room');
-    // register on server
-    await fetch(`${REGISTRY_URL}/rooms/${room}/join`, {
-      method: 'POST',
-      headers: { 'Content-Type':'application/json' },
-      body: JSON.stringify({ peerId: peer.id })
-    });
-    appendSystemMsg(`Joined room: ${room}`);
-    // get peers and connect
-    const res = await fetch(`${REGISTRY_URL}/rooms/${room}/peers`);
-    const peers = await res.json();
-    peers.forEach(pid => {
-      if (pid !== peer.id && !connections[pid]) {
-        const c = peer.connect(pid);
-        c.on('open', () => setupConnection(c));
+    // Lock screen
+    document.getElementById('unlockForm').addEventListener('submit',e=>{
+      e.preventDefault();
+      if(document.getElementById('passwordInput').value===':)00@'){
+        document.getElementById('lockScreen').classList.remove('active');
+      } else {
+        document.getElementById('passwordMsg').textContent='❌ Wrong password';
       }
     });
-  }
 
-  function renderConnections() {
-    connDiv.innerHTML = '<strong>Active Peers:</strong>';
-    const ids = Object.keys(connections);
-    if (!ids.length) {
-      connDiv.innerHTML += '<div class="system">— none —</div>';
-    }
-    ids.forEach(id => {
-      const div = document.createElement('div');
-      div.className = 'conn-item';
-      div.innerHTML = `
-        <span>${id}</span>
-        <button onclick="disconnectPeer('${id}')">✖</button>
-      `;
-      connDiv.appendChild(div);
+    // P2P & UI references
+    const peer=new Peer(), connections={}, connDiv=document.getElementById('connections');
+    const idInput=document.getElementById('my-id'), sendBtn=document.getElementById('sendBtn');
+
+    // Peer events
+    peer.on('open', id=>{
+      idInput.value=id;
+      listRooms();
     });
-    sendBtn.disabled = ids.length === 0;
-  }
+    peer.on('connection', c=>{
+      if(!connections[c.peer]) setupConnection(c);
+    });
 
-  function disconnectPeer(id) {
-    connections[id].close();
-    delete connections[id];
-    renderConnections();
-    appendSystemMsg(`You disconnected: ${id}`);
-  }
+    // Copy ID
+    document.getElementById('copyIdBtn').onclick=()=>{
+      navigator.clipboard.writeText(idInput.value)
+        .then(()=>alert('ID copied'));
+    };
 
-  // MESSAGING
-  function sendMessage() {
-    const input = document.getElementById('messageInput');
-    const text = input.value.trim();
-    if (!text) return;
-    const payload = { user: username, avatar: avatarURL, text };
-    appendMessage(payload, true);
-    Object.values(connections).forEach(c => c.open && c.send(payload));
-    input.value = '';
-  }
+    // Connect to single peer
+    document.getElementById('connectBtn').onclick=()=>{
+      const fid=document.getElementById('connectId').value.trim();
+      if(!fid||connections[fid]||fid===peer.id) return;
+      const c=peer.connect(fid);
+      c.on('open',()=>setupConnection(c));
+    };
 
-  function appendMessage({ user, avatar, text }, isYou) {
-    const div = document.createElement('div');
-    div.className = 'message';
-    div.innerHTML = `
-      <img class="avatar" src="${avatar}" />
-      <div class="text">
-        <strong>${isYou ? 'You' : user}</strong>: ${text}
-      </div>
-    `;
-    document.getElementById('chatbox').appendChild(div);
-    chatbox.scrollTop = chatbox.scrollHeight;
-  }
+    // Setup connection handlers
+    function setupConnection(c){
+      connections[c.peer]=c;
+      renderConnections();
+      appendSystemMsg(`Connected: ${c.peer}`);
+      c.on('data',data=>appendMessage(data,false));
+      c.on('close',()=>{
+        delete connections[c.peer];
+        appendSystemMsg(`Peer left: ${c.peer}`);
+        renderConnections();
+      });
+    }
 
-  function appendSystemMsg(msg) {
-    const div = document.createElement('div');
-    div.className = 'text system';
-    div.textContent = msg;
-    document.getElementById('chatbox').appendChild(div);
-    chatbox.scrollTop = chatbox.scrollHeight;
-  }
+    // Room controls
+    document.getElementById('createRoomBtn').onclick=createRoom;
+    document.getElementById('listRoomsBtn').onclick=listRooms;
+    document.getElementById('joinRoomBtn').onclick=joinRoom;
+
+    async function createRoom(){
+      const room=document.getElementById('roomName').value.trim();
+      statusMsg.textContent='';
+      if(!room) return statusMsg.textContent='⚠️ Enter a room name';
+      try {
+        const res=await fetch(`${REGISTRY_URL}/rooms`,{
+          method:'POST',
+          headers:{'Content-Type':'application/json'},
+          body:JSON.stringify({room})
+        });
+        if(!res.ok) throw new Error(await res.text());
+        document.getElementById('roomName').value='';
+        await listRooms();
+        statusMsg.style.color='#0f0';
+        statusMsg.textContent=`✅ Room "${room}" created`;
+      } catch(err){
+        statusMsg.style.color='#f00';
+        statusMsg.textContent=`❌ ${err.message}`;
+      }
+    }
+
+    async function listRooms(){
+      statusMsg.textContent='';
+      try {
+        const res=await fetch(`${REGISTRY_URL}/rooms`);
+        if(!res.ok) throw new Error(await res.text());
+        const rooms=await res.json();
+        const sel=document.getElementById('roomList');
+        sel.innerHTML='<option value="" disabled selected>— select —</option>'
+          +rooms.map(r=>`<option value="${r}">${r}</option>`).join('');
+      } catch(err){
+        statusMsg.style.color='#f00';
+        statusMsg.textContent=`❌ ${err.message}`;
+      }
+    }
+
+    async function joinRoom(){
+      const room=document.getElementById('roomList').value;
+      statusMsg.textContent='';
+      if(!room) return statusMsg.textContent='⚠️ Select a room';
+      try {
+        // register
+        let res=await fetch(`${REGISTRY_URL}/rooms/${room}/join`,{
+          method:'POST',
+          headers:{'Content-Type':'application/json'},
+          body:JSON.stringify({peerId:peer.id})
+        });
+        if(!res.ok) throw new Error(await res.text());
+        appendSystemMsg(`Joined room: ${room}`);
+        // fetch and connect
+        res=await fetch(`${REGISTRY_URL}/rooms/${room}/peers`);
+        const peers=await res.json();
+        peers.forEach(pid=>{
+          if(pid!==peer.id && !connections[pid]){
+            const c=peer.connect(pid);
+            c.on('open',()=>setupConnection(c));
+          }
+        });
+      } catch(err){
+        statusMsg.style.color='#f00';
+        statusMsg.textContent=`❌ ${err.message}`;
+      }
+    }
+
+    // Render connections list
+    function renderConnections(){
+      connDiv.innerHTML='<strong>Active Peers:</strong>';
+      const ids=Object.keys(connections);
+      if(!ids.length){
+        connDiv.innerHTML+='<div class="system">— none —</div>';
+      }
+      ids.forEach(id=>{
+        const item=document.createElement('div');
+        item.className='conn-item';
+        item.innerHTML=`
+          <span>${id}</span>
+          <button onclick="disconnectPeer('${id}')">✖</button>
+        `;
+        connDiv.appendChild(item);
+      });
+      sendBtn.disabled=ids.length===0;
+    }
+
+    // Global for disconnect
+    window.disconnectPeer=function(id){
+      connections[id].close();
+      delete connections[id];
+      renderConnections();
+      appendSystemMsg(`You disconnected: ${id}`);
+    };
+
+    // Messaging
+    document.getElementById('sendBtn').onclick=()=>{
+      const inp=document.getElementById('messageInput');
+      const text=inp.value.trim();
+      if(!text) return;
+      const msg={user:username,avatar:avatarURL,text};
+      appendMessage(msg,true);
+      Object.values(connections).forEach(c=>c.open&&c.send(msg));
+      inp.value='';
+    };
+    function appendMessage({user,avatar,text},isYou){
+      const div=document.createElement('div');
+      div.className='message';
+      div.innerHTML=`
+        <img class="avatar" src="${avatar}" />
+        <div class="text"><strong>${isYou?'You':user}</strong>: ${text}</div>
+      `;
+      document.getElementById('chatbox').appendChild(div);
+      chatbox.scrollTop=chatbox.scrollHeight;
+    }
+    function appendSystemMsg(msg){
+      const div=document.createElement('div');
+      div.className='text system';
+      div.textContent=msg;
+      document.getElementById('chatbox').appendChild(div);
+      chatbox.scrollTop=chatbox.scrollHeight;
+    }
+  })();
   </script>
+
 </body>
 </html>
