--- a/index.html
+++ b/index.html
@@ -2,346 +2,161 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>⚡ project silica 404sec </title>
+  <title>⚡ project silica 404sec (Quick Connect)</title>
   <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0 }
     body {
-      display: flex; flex-direction: column;
-      height: 100vh; background: #000;
-      color: #0f0; font-family: monospace;
-      padding: 20px;
+      background: #000; color: #0f0;
+      font-family: monospace; padding: 20px;
     }
-    h2 { margin-bottom: 12px }
-    #chatbox {
-      flex: 1; overflow-y: auto;
-      background: #111; border: 1px solid #0f0;
-      padding: 10px; margin-bottom: 10px;
+    #peerArea, #quickConnect, #connections, #chatbox, #bottom {
+      margin-bottom: 10px;
     }
-    .message {
-      display: flex; align-items: center;
-      margin-bottom: 8px;
-    }
-    .avatar {
-      width: 36px; height: 36px; object-fit: cover;
-      border: 1px solid #0f0; border-radius: 4px;
-      margin-right: 8px;
-    }
-    .text { line-height: 1.4 }
-    .system { opacity: 0.6; font-style: italic }
-    #peerArea, #roomArea {
-      display: flex; align-items: center;
-      gap: 8px; margin-bottom: 12px;
-    }
-    input, select, button {
+    button, input {
       background: #111; color: #0f0;
-      border: 1px solid #0f0; padding: 6px 10px;
-      font-family: monospace; font-size: 1em;
+      border: 1px solid #0f0; padding: 6px;
     }
-    input[readonly] { cursor: text }
-    button:disabled { opacity: 0.4; cursor: not-allowed }
-    #connections {
-      margin-bottom: 12px; font-size: 0.9em;
+    .message { display: flex; align-items: center; margin: 6px 0; }
+    .avatar {
+      width: 32px; height: 32px; margin-right: 8px;
+      border: 1px solid #0f0; border-radius: 4px;
     }
-    .conn-item {
-      display: flex; justify-content: space-between;
-      padding: 4px; border: 1px solid #0f0;
-      margin-top: 4px;
-    }
-    /* Avatar/Lock screens (unchanged) */
-    #avatarPicker, #lockScreen {
-      position: fixed; inset: 0; display: none;
-      background: rgba(0,0,0,0.95);
-      flex-direction: column; align-items: center;
-      justify-content: center; z-index: 10;
-    }
-    #avatarPicker.active, #lockScreen.active { display: flex }
-    #avatarGrid {
-      display: grid; grid-template-columns: repeat(3,80px);
-      gap: 12px; margin: 12px 0;
-    }
-    #avatarGrid img {
-      width: 70px; cursor: pointer; border: 1px solid #0f0;
-    }
-    .avatar-option { margin-top: 10px }
-    #statusMsg {
-      margin-top: 6px; font-size: 0.9em; color: #f00;
-    }
+    .text { line-height: 1.2; }
+    .system { opacity: 0.6; font-style: italic; }
   </style>
 </head>
-<body oncontextmenu="return false;">
+<body>
 
   <!-- untiedlaces , 02 3 , bxr ,hd -->
 
-  <!-- Avatar Picker -->
-  <div id="avatarPicker" class="active">
-    <h3>🧙 Choose Your Avatar</h3>
-    <button id="refreshAvatars">🔄 Refresh</button>
-    <div id="avatarGrid"></div>
-    <div class="avatar-option">
-      <button id="blackAvatar">Use Black Avatar</button>
-    </div>
-    <div class="avatar-option">
-      <input id="customURL" placeholder="Custom URL…" />
-      <button id="customOk">OK</button>
-    </div>
-    <p style="font-size:12px;">
-      Avatars by Dicebear | Or supply your own URL
-    </p>
-  </div>
-
-  <!-- Lock Screen -->
-  <div id="lockScreen">
-    <h2>🔐 Enter Password</h2>
-    <form id="unlockForm">
-      <input type="password" id="passwordInput"
-             placeholder="Password" required autocomplete="off" />
-      <button type="submit">Unlock</button>
-    </form>
-    <p id="passwordMsg" style="color:red; margin-top:8px;"></p>
-  </div>
-
   <h2>⚡ project silica 404sec</h2>
 
-  <!-- Peer Controls -->
+  <!-- display your own peer ID and copy it -->
   <div id="peerArea">
-    <span>Your ID:</span>
-    <input id="my-id" readonly />
+    Your ID: <input id="my-id" readonly size="20" />
     <button id="copyIdBtn">Copy ID</button>
-    <input id="connectId" placeholder="Friend's ID…" />
-    <button id="connectBtn">Connect</button>
   </div>
 
-  <!-- Room Controls -->
-  <div id="roomArea">
-    <input id="roomName" placeholder="Room name…" />
-    <button id="createRoomBtn">Create Room</button>
-    <button id="listRoomsBtn">List Rooms</button>
-    <select id="roomList" style="min-width:120px;">
-      <option value="" disabled selected>— select —</option>
-    </select>
-    <button id="joinRoomBtn">Join Room</button>
+  <!-- quick-connect buttons for 5 permanent IDs -->
+  <div id="quickConnect">
+    <strong>Quick Connect:</strong>
+    <!-- buttons injected here -->
   </div>
-  <div id="statusMsg"></div>
 
-  <!-- Connections & Chat -->
-  <div id="connections"></div>
-  <div id="chatbox"></div>
+  <!-- show who you're connected to -->
+  <div id="connections"><strong>Active Peers:</strong></div>
+
+  <!-- chat log -->
+  <div id="chatbox" style="border:1px solid #0f0; padding:8px; height:200px; overflow:auto"></div>
+
+  <!-- send message -->
   <div id="bottom">
-    <input id="messageInput" placeholder="Type message…" />
+    <input id="messageInput" placeholder="Type message…" size="40" />
     <button id="sendBtn" disabled>Send</button>
   </div>
 
   <script>
   (function(){
-    const REGISTRY_URL = 'http://localhost:3000';
-    let username = prompt("Choose your username:") || "Anonymous";
-    let avatarURL = '';
-    const styles = ["fun-emoji","pixel-art","bottts","identicon","adventurer","croodles"];
-    const seedBase = username.replace(/\W+/g,'').toLowerCase()||'guest';
-    const avatarGrid = document.getElementById('avatarGrid');
-    const statusMsg = document.getElementById('statusMsg');
+    // replace these with your actual “room” or friend IDs
+    const QUICK_IDS = ['room1','room2','room3','room4','room5'];
 
-    // Avatar picker
-    function refreshAvatars(){
-      avatarGrid.innerHTML = '';
-      for(let i=0;i<9;i++){
-        const style=styles[Math.floor(Math.random()*styles.length)];
-        const seed=seedBase+Math.floor(Math.random()*10000);
-        const img=document.createElement('img');
-        img.src=`https://api.dicebear.com/7.x/${style}/svg?seed=${seed}`;
-        img.onclick=()=>chooseAvatar(img.src);
-        avatarGrid.appendChild(img);
-      }
-    }
-    function chooseAvatar(url){
-      avatarURL=url;
-      document.getElementById('avatarPicker').classList.remove('active');
-      document.getElementById('lockScreen').classList.add('active');
-    }
-    document.getElementById('refreshAvatars').onclick=refreshAvatars;
-    document.getElementById('blackAvatar').onclick=()=>chooseAvatar('https://via.placeholder.com/40/000');
-    document.getElementById('customOk').onclick=()=>{
-      const url=document.getElementById('customURL').value.trim();
-      if(url) chooseAvatar(url);
-    };
-    refreshAvatars();
+    // P2P setup
+    const peer = new Peer();          // random ID
+    const connections = {};          
+    const idInput = document.getElementById('my-id');
+    const connDiv = document.getElementById('connections');
+    const sendBtn = document.getElementById('sendBtn');
 
-    // Lock screen
-    document.getElementById('unlockForm').addEventListener('submit',e=>{
-      e.preventDefault();
-      if(document.getElementById('passwordInput').value===':)00@'){
-        document.getElementById('lockScreen').classList.remove('active');
-      } else {
-        document.getElementById('passwordMsg').textContent='❌ Wrong password';
-      }
+    peer.on('open', id => {
+      idInput.value = id;
     });
 
-    // P2P & UI references
-    const peer=new Peer(), connections={}, connDiv=document.getElementById('connections');
-    const idInput=document.getElementById('my-id'), sendBtn=document.getElementById('sendBtn');
-
-    // Peer events
-    peer.on('open', id=>{
-      idInput.value=id;
-      listRooms();
-    });
-    peer.on('connection', c=>{
-      if(!connections[c.peer]) setupConnection(c);
+    // handle incoming
+    peer.on('connection', c => {
+      if (!connections[c.peer]) setupConnection(c);
     });
 
-    // Copy ID
-    document.getElementById('copyIdBtn').onclick=()=>{
+    // copy your ID
+    document.getElementById('copyIdBtn').onclick = () => {
       navigator.clipboard.writeText(idInput.value)
-        .then(()=>alert('ID copied'));
+        .then(()=>alert('Copied!'));
     };
 
-    // Connect to single peer
-    document.getElementById('connectBtn').onclick=()=>{
-      const fid=document.getElementById('connectId').value.trim();
-      if(!fid||connections[fid]||fid===peer.id) return;
-      const c=peer.connect(fid);
-      c.on('open',()=>setupConnection(c));
-    };
+    // inject quick-connect buttons
+    const qc = document.getElementById('quickConnect');
+    QUICK_IDS.forEach(fid => {
+      const btn = document.createElement('button');
+      btn.textContent = 'Connect ' + fid;
+      btn.onclick = () => connectToPeer(fid);
+      qc.appendChild(btn);
+    });
 
-    // Setup connection handlers
-    function setupConnection(c){
-      connections[c.peer]=c;
+    // connect helper
+    function connectToPeer(friendId) {
+      if (connections[friendId] || friendId === peer.id) return;
+      const c = peer.connect(friendId);
+      c.on('open', () => setupConnection(c));
+    }
+
+    // set up new DataConnection
+    function setupConnection(c) {
+      connections[c.peer] = c;
       renderConnections();
-      appendSystemMsg(`Connected: ${c.peer}`);
-      c.on('data',data=>appendMessage(data,false));
-      c.on('close',()=>{
+      appendSystemMsg(`Connected to ${c.peer}`);
+      c.on('data', d => appendMessage(d, false));
+      c.on('close', () => {
         delete connections[c.peer];
-        appendSystemMsg(`Peer left: ${c.peer}`);
         renderConnections();
+        appendSystemMsg(`${c.peer} disconnected`);
       });
     }
 
-    // Room controls
-    document.getElementById('createRoomBtn').onclick=createRoom;
-    document.getElementById('listRoomsBtn').onclick=listRooms;
-    document.getElementById('joinRoomBtn').onclick=joinRoom;
-
-    async function createRoom(){
-      const room=document.getElementById('roomName').value.trim();
-      statusMsg.textContent='';
-      if(!room) return statusMsg.textContent='⚠️ Enter a room name';
-      try {
-        const res=await fetch(`${REGISTRY_URL}/rooms`,{
-          method:'POST',
-          headers:{'Content-Type':'application/json'},
-          body:JSON.stringify({room})
-        });
-        if(!res.ok) throw new Error(await res.text());
-        document.getElementById('roomName').value='';
-        await listRooms();
-        statusMsg.style.color='#0f0';
-        statusMsg.textContent=`✅ Room "${room}" created`;
-      } catch(err){
-        statusMsg.style.color='#f00';
-        statusMsg.textContent=`❌ ${err.message}`;
+    // update active-peers list
+    function renderConnections() {
+      connDiv.innerHTML = '<strong>Active Peers:</strong>';
+      const ids = Object.keys(connections);
+      if (!ids.length) {
+        connDiv.innerHTML += ' <span class="system">none</span>';
       }
-    }
-
-    async function listRooms(){
-      statusMsg.textContent='';
-      try {
-        const res=await fetch(`${REGISTRY_URL}/rooms`);
-        if(!res.ok) throw new Error(await res.text());
-        const rooms=await res.json();
-        const sel=document.getElementById('roomList');
-        sel.innerHTML='<option value="" disabled selected>— select —</option>'
-          +rooms.map(r=>`<option value="${r}">${r}</option>`).join('');
-      } catch(err){
-        statusMsg.style.color='#f00';
-        statusMsg.textContent=`❌ ${err.message}`;
-      }
-    }
-
-    async function joinRoom(){
-      const room=document.getElementById('roomList').value;
-      statusMsg.textContent='';
-      if(!room) return statusMsg.textContent='⚠️ Select a room';
-      try {
-        // register
-        let res=await fetch(`${REGISTRY_URL}/rooms/${room}/join`,{
-          method:'POST',
-          headers:{'Content-Type':'application/json'},
-          body:JSON.stringify({peerId:peer.id})
-        });
-        if(!res.ok) throw new Error(await res.text());
-        appendSystemMsg(`Joined room: ${room}`);
-        // fetch and connect
-        res=await fetch(`${REGISTRY_URL}/rooms/${room}/peers`);
-        const peers=await res.json();
-        peers.forEach(pid=>{
-          if(pid!==peer.id && !connections[pid]){
-            const c=peer.connect(pid);
-            c.on('open',()=>setupConnection(c));
-          }
-        });
-      } catch(err){
-        statusMsg.style.color='#f00';
-        statusMsg.textContent=`❌ ${err.message}`;
-      }
-    }
-
-    // Render connections list
-    function renderConnections(){
-      connDiv.innerHTML='<strong>Active Peers:</strong>';
-      const ids=Object.keys(connections);
-      if(!ids.length){
-        connDiv.innerHTML+='<div class="system">— none —</div>';
-      }
-      ids.forEach(id=>{
-        const item=document.createElement('div');
-        item.className='conn-item';
-        item.innerHTML=`
-          <span>${id}</span>
-          <button onclick="disconnectPeer('${id}')">✖</button>
-        `;
-        connDiv.appendChild(item);
+      ids.forEach(id => {
+        const span = document.createElement('span');
+        span.textContent = ' ' + id;
+        connDiv.appendChild(span);
       });
-      sendBtn.disabled=ids.length===0;
+      sendBtn.disabled = !ids.length;
     }
 
-    // Global for disconnect
-    window.disconnectPeer=function(id){
-      connections[id].close();
-      delete connections[id];
-      renderConnections();
-      appendSystemMsg(`You disconnected: ${id}`);
+    // send chat
+    sendBtn.onclick = () => {
+      const input = document.getElementById('messageInput');
+      const text = input.value.trim();
+      if (!text) return;
+      const msg = { user: idInput.value, text };
+      appendMessage(msg, true);
+      Object.values(connections).forEach(c => c.send(msg));
+      input.value = '';
     };
 
-    // Messaging
-    document.getElementById('sendBtn').onclick=()=>{
-      const inp=document.getElementById('messageInput');
-      const text=inp.value.trim();
-      if(!text) return;
-      const msg={user:username,avatar:avatarURL,text};
-      appendMessage(msg,true);
-      Object.values(connections).forEach(c=>c.open&&c.send(msg));
-      inp.value='';
-    };
-    function appendMessage({user,avatar,text},isYou){
-      const div=document.createElement('div');
-      div.className='message';
-      div.innerHTML=`
-        <img class="avatar" src="${avatar}" />
-        <div class="text"><strong>${isYou?'You':user}</strong>: ${text}</div>
-      `;
+    // display incoming or outgoing
+    function appendMessage(data, isYou) {
+      const div = document.createElement('div');
+      div.className = 'message';
+      div.innerHTML = 
+        `<div class="text">
+           <strong>${isYou?'You':data.user}:</strong> ${data.text}
+         </div>`;
       document.getElementById('chatbox').appendChild(div);
-      chatbox.scrollTop=chatbox.scrollHeight;
+      chatbox.scrollTop = chatbox.scrollHeight;
     }
-    function appendSystemMsg(msg){
-      const div=document.createElement('div');
-      div.className='text system';
-      div.textContent=msg;
+
+    function appendSystemMsg(msg) {
+      const div = document.createElement('div');
+      div.className = 'text system';
+      div.textContent = msg;
       document.getElementById('chatbox').appendChild(div);
-      chatbox.scrollTop=chatbox.scrollHeight;
+      chatbox.scrollTop = chatbox.scrollHeight;
     }
   })();
   </script>
-
 </body>
 </html>
